Closed Bug 873065 Opened 12 years ago Closed 12 years ago

Unable to receive file via Bluetooth file transfer on Unagi

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:leo+, firefox22 wontfix, firefox23 wontfix, firefox24 fixed, b2g18 fixed, b2g18-v1.0.0 wontfix, b2g18-v1.0.1 wontfix)

VERIFIED FIXED
blocking-b2g leo+
Tracking Status
firefox22 --- wontfix
firefox23 --- wontfix
firefox24 --- fixed
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- wontfix

People

(Reporter: tzimmermann, Assigned: tzimmermann)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

On master I cannot receive files via Bluetooth on my Unagi. STR: - pair with computer - send file from computer to phone - tap 'Transfer' on phone Expected result: - file gets transfered Actual result: - an error message appears and transfer stops Patch coming soon...
The problem is explained in the commit message. I triggered the bug with an filename that ends with .iso.
Attachment #750451 - Flags: review?(dhylands)
I nom'd this because this will affect leo devices, and the problem was introduced with the composite storage code in bug 858416 IIRC.
blocking-b2g: --- → leo?
Attachment #750451 - Flags: review?(dhylands) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
QA Contact: wachen
Hi, I would like this to promote to v1train so that: 1. I can verify bug 817972 and bug 832878 (receive continuous files and receive certain types of file) 2. Bluetooth would have at least basic functionality (Basic bt functionality: send and receive file) 3. More tests could be done before v1train release (The faster this can be in v1train, the more we can test before release) 4. Gaia-ui-tests automation on bluetooth can be continue. (There is a plan on using gaia-ui-tests to receive/send file automatically I can't receive files on unagi in pvt v1train build.
Attachment #750451 - Flags: approval-mozilla-b2g18?
blocking-b2g: leo? → leo+
Keywords: regression
Comment on attachment 750451 [details] [diff] [review] [01] Bug 873065: Use DEVICESTORAGE_SDCARD for unknown file types with leo+, no reason to approve.
Attachment #750451 - Flags: approval-mozilla-b2g18?
Isn't it fixed alrdy? Please see my comment 5 as your reference. I don't buy your response and this should definitely be uplift.
Flags: in-moztrap?
Flags: in-moztrap? → in-moztrap+
Verified in 2013.06.16 pvt master build in unagi <!-- Mercurial-Information: <project name="mozilla-central" path="gecko" remote="hgmozillaorg" revision="36da3cb92193"/> --> <project name="gecko.git" path="gecko" remote="mozillaorg" revision="161d0d64f7baa57bd52220ade7f189fd4e4f0dea"/> <project name="gaia.git" path="gaia" remote="mozillaorg" revision="141ed6da339f477523dcc932217fc0ba7a0ea68d"/>
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: