Bug 873065 - Use DEVICESTORAGE_SDCARD for unknown file types. r=dhylands

The method DeviceStorageFile::CreateUnique fails for files with an
unknown extension. It calls DeviceStorageFileChecker::GetTypeFromFileName
to retrieve the default location. The returned value is "Unknown", which
is passed to the constructor of DeviceStorageFile. This class doesn't
handle "Unknown" in it's initialization, and fails without creating a
file.

This patch changes the default return value of GetTypeFromFileName to the
constant DEVICESTORAGE_SDCARD. All files with unknown extension will now
be stored on the sd card.